--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
       <div class="button-container">
         <!-- TODO: Hier neue Buttons erstellen. -->
+        <button onclick="$(aufgabe04)">Aufgabe4</button>
         <button onclick="$(aufgabe03)">Aufgabe3</button>
         <button type="button" onclick="$(aufgabe01)">Aufgabe 1</button>
         <button onclick="$(aufgabe02)">Aufgabe2</button>
