--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
 
       <div class="button-container">
         <!-- TODO: Hier neue Buttons erstellen. -->
+        <button onclick="$(aufgabe09)">Aufgabe9</button>
+        <button onclick="$(aufgabe05)">Aufgabe5</button>
         <button onclick="$(aufgabe04)">Aufgabe4</button>
         <button onclick="$(aufgabe03)">Aufgabe3</button>
-        <button type="button" onclick="$(aufgabe01)">Aufgabe 1</button>
         <button onclick="$(aufgabe02)">Aufgabe2</button>
+        <button type="button" onclick="$(aufgabe01)">Aufgabe 1</button>
       </div>
     </div>
 
