--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <div class="button-container">
         <!-- TODO: Hier neue Buttons erstellen. -->
         <button onclick="$(aufgabe11)">Aufgabe11</button>
+        <button onclick="$(aufgabe10)">Aufgabe10</button>
         <button onclick="$(aufgabe09)">Aufgabe9</button>
         <button onclick="$(aufgabe05)">Aufgabe5</button>
         <button onclick="$(aufgabe04)">Aufgabe4</button>
