--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <button onclick="$(aufgabe11)">Aufgabe11</button>
         <button onclick="$(aufgabe10)">Aufgabe10</button>
         <button onclick="$(aufgabe09)">Aufgabe9</button>
+        <button onclick="$(aufgabe06)">Aufgabe6</button>
         <button onclick="$(aufgabe05)">Aufgabe5</button>
         <button onclick="$(aufgabe04)">Aufgabe4</button>
         <button onclick="$(aufgabe03)">Aufgabe3</button>
