--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <button onclick="$(aufgabe11)">Aufgabe11</button>
         <button onclick="$(aufgabe10)">Aufgabe10</button>
         <button onclick="$(aufgabe09)">Aufgabe9</button>
+        <button onclick="$(aufgabe08)">Aufgabe8</button>
+        <button onclick="$(aufgabe07)">Aufgabe7</button>
         <button onclick="$(aufgabe06)">Aufgabe6</button>
         <button onclick="$(aufgabe05)">Aufgabe5</button>
         <button onclick="$(aufgabe04)">Aufgabe4</button>
