--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
       <div class="button-container">
         <!-- TODO: Hier neue Buttons erstellen. -->
+        <button onclick="$(aufgabe12)">Aufgabe12</button>
         <button onclick="$(aufgabe11)">Aufgabe11</button>
         <button onclick="$(aufgabe10)">Aufgabe10</button>
         <button onclick="$(aufgabe09)">Aufgabe9</button>
