--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 
       <div class="button-container">
         <!-- TODO: Hier neue Buttons erstellen. -->
+        <button onclick="$(aufgabe27)">Aufgabe27</button>
+        <button onclick="$(aufgabe21)">Aufgabe21</button>
+        <button onclick="$(aufgabe20)">Aufgabe20</button>
+        <button onclick="$(aufgabe19)">Aufgabe19</button>
         <button onclick="$(aufgabe15)">Aufgabe15</button>
         <button onclick="$(aufgabe14)">Aufgabe14</button>
         <button onclick="$(aufgabe13)">Aufgabe13</button>
