--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <div class="button-container">
         <!-- TODO: Hier neue Buttons erstellen. -->
         <button onclick="$(aufgabe27)">Aufgabe27</button>
+        <button onclick="$(aufgabe24)">Aufgabe24</button>
+        <button onclick="$(aufgabe23)">Aufgabe23</button>
         <button onclick="$(aufgabe21)">Aufgabe21</button>
         <button onclick="$(aufgabe20)">Aufgabe20</button>
         <button onclick="$(aufgabe19)">Aufgabe19</button>
