--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <button onclick="$(aufgabe27)">Aufgabe27</button>
         <button onclick="$(aufgabe24)">Aufgabe24</button>
         <button onclick="$(aufgabe23)">Aufgabe23</button>
+        <button onclick="$(aufgabe22)">Aufgabe22</button>
         <button onclick="$(aufgabe21)">Aufgabe21</button>
         <button onclick="$(aufgabe20)">Aufgabe20</button>
         <button onclick="$(aufgabe19)">Aufgabe19</button>
