--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <button onclick="$(aufgabe21)">Aufgabe21</button>
         <button onclick="$(aufgabe20)">Aufgabe20</button>
         <button onclick="$(aufgabe19)">Aufgabe19</button>
+        <button onclick="$(aufgabe18)">Aufgabe18</button>
+        <button onclick="$(aufgabe17)">Aufgabe17</button>
+        <button onclick="$(aufgabe16)">Aufgabe16</button>
         <button onclick="$(aufgabe15)">Aufgabe15</button>
         <button onclick="$(aufgabe14)">Aufgabe14</button>
         <button onclick="$(aufgabe13)">Aufgabe13</button>
